--- a/user-workspace/package.json
+++ b/user-workspace/package.json
@@ -10,15 +10,27 @@
   "license": "ISC",
   "devDependencies": {
     "@chainlink/contracts": "^1.3.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.11",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.13",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^5.3.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.10",
     "@uniswap/v3-core": "^1.0.1",
-    "chai": "^5.2.0",
+    "chai": "^4.5.0",
     "ethereum-waffle": "^4.0.10",
-    "ethers": "^6.13.5",
-    "hardhat": "^2.23.0"
+    "ethers": "^5.8.0",
+    "hardhat": "^2.23.0",
+    "hardhat-gas-reporter": "^1.0.10",
+    "solidity-coverage": "^0.8.14",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "abstract-leveldown": "^6.3.0",
