Sandbox snapshot commit

--- a/user-workspace/package.json
+++ b/user-workspace/package.json
@@ -19,6 +19,7 @@
     "@nomicfoundation/hardhat-verify": "^2.0.13",
     "@nomicfoundation/ignition-core": "^0.15.11",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^5.3.0",
     "@typechain/ethers-v6": "^0.5.1",
@@ -27,6 +28,7 @@
     "@types/mocha": "^10.0.10",
     "@uniswap/v3-core": "^1.0.1",
     "chai": "^4.5.0",
+    "dotenv": "^16.5.0",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.8.0",
     "hardhat": "^2.12.0",
@@ -127,7 +129,6 @@
     "detect-indent": "^6.1.0",
     "diff": "^5.2.0",
     "dir-glob": "^3.0.1",
-    "dotenv": "^8.6.0",
     "dunder-proto": "^1.0.1",
     "ecc-jsbn": "^0.1.2",
     "elliptic": "^6.6.1",
