--- a/user-workspace/package.json
+++ b/user-workspace/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@chainlink/contracts": "^1.3.0",
+    "@layerzerolabs/solidity-examples": "^1.1.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-ignition": "^0.15.11",
