--- a/user-workspace/swarm/requirements.txt
+++ b/user-workspace/swarm/requirements.txt
@@ -1,18 +1,53 @@
-<<<<<<< HEAD
+# Core Dependencies
 fastapi==0.68.1
 uvicorn==0.15.0
-stripe==2.63.0
 python-dotenv==0.19.0
 aiohttp==3.8.1
+websockets==9.1
+
+# Stripe Integration
+stripe==2.63.0
+
+# Database & Storage
+aiosqlite==0.17.0
+sqlalchemy==1.4.23
+alembic==1.7.1
+
+# Web3 & Blockchain
+web3==5.24.0
+eth-account==0.5.6
+eth-typing==2.2.2
+eth-utils==1.10.0
+
+# DeFi Integration
+aave-protocol-py==0.3.0
+uniswap-python==0.5.1
+
+# Performance & Monitoring
+prometheus-client==0.11.0
+python-json-logger==2.0.2
+statsd==3.3.0
+
+# Security
+cryptography==3.4.8
+pyjwt==2.1.0
+bcrypt==3.2.0
+
+# Testing
+pytest==6.2.5
+pytest-asyncio==0.15.1
+pytest-cov==2.12.1
+
+# Development Tools
+black==21.7b0
+flake8==3.9.2
+mypy==0.910
+isort==5.9.3
+
+# Additional Utils
 pydantic==1.8.2
 python-multipart==0.0.5
-jinja2==3.0.1
-aiosqlite==0.17.0
-=======
-aiohttp==3.9.1
-asyncio==3.4.3
-python-dotenv==1.0.0
-stripe==7.0.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
->>>>>>> 4f330f01e0a526c436ddb0eafebc08542a45a47f
+requests==2.26.0
+aiofiles==0.7.0
+tenacity==8.0.1
+schedule==1.1.0
